--- a/launcher-train/launcher-train.csproj
+++ b/launcher-train/launcher-train.csproj
@@ -56,7 +56,6 @@
         </Compile>
         <Compile Include="View\Main.xaml.cs">
           <DependentUpon>Main.xaml</DependentUpon>
-          <SubType>Code</SubType>
         </Compile>
     </ItemGroup>
     <ItemGroup>
@@ -77,10 +76,7 @@
         <None Include="App.config" />
     </ItemGroup>
     <ItemGroup>
-      <Page Include="View\Main.xaml">
-        <Generator>MSBuild:Compile</Generator>
-        <SubType>Designer</SubType>
-      </Page>
+      <Page Include="View\Main.xaml" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
